Dark Mode: fix `.dropdown-header` styles (#4788)

--- a/redaxo/src/addons/be_style/plugins/redaxo/scss/bootstrap-dark-overrides/_dropdowns.scss
+++ b/redaxo/src/addons/be_style/plugins/redaxo/scss/bootstrap-dark-overrides/_dropdowns.scss
@@ -43,7 +43,7 @@
     }
 
     .dropdown-header {
-        color: $color-grey-1;
+        color: $color-text-light-inactive;
     }
 }
 
